Added hadoop config files.

--- a/templates/spark/spark-defaults.conf
+++ b/templates/spark/spark-defaults.conf
@@ -9,6 +9,9 @@
 # spark.driver.memory              5g
 # spark.executor.extraJavaOptions  -XX:+PrintGCDetails -Dkey=value -Dnumbers="one two three"
 
+spark.executor.extraLibraryPath $HOME/ephemeral-hdfs/lib/native/
+spark.executor.extraClassPath   $HOME/ephemeral-hdfs/conf
+
 spark.driver.memory 40g
 spark.executor.memory 90g
 spark.driver.maxResultSize = 10g
