Migrating in the direction of supporting multiple concurrent users on a cluster.

--- a/templates/spark/conf/spark-defaults.conf
+++ b/templates/spark/conf/spark-defaults.conf
@@ -9,11 +9,11 @@
 # spark.driver.memory              5g
 # spark.executor.extraJavaOptions  -XX:+PrintGCDetails -Dkey=value -Dnumbers="one two three"
 
-spark.executor.extraLibraryPath $HOME/ephemeral-hdfs/lib/native/
-spark.executor.extraClassPath   $HOME/ephemeral-hdfs/conf
+spark.executor.extraLibraryPath /opt/ephemeral-hdfs/lib/native/
+spark.executor.extraClassPath   /opt/ephemeral-hdfs/conf
 
-spark.driver.memory 30g
-spark.executor.memory 90g
+spark.driver.memory {{spark_master_memory}}
+spark.executor.memory {{spark_slave_memory}}
 spark.driver.maxResultSize = 10g
 spark.akka.frameSize = 2047
 spark.rdd.compress = true
