Work in progress: Adding support in vapor for EC2.  Although this work is likely to be supplanted by Flintrock.

--- a/vapor/support_files_ec2/templates/ganglia/ganglia.conf
+++ b/vapor/support_files_ec2/templates/ganglia/ganglia.conf
@@ -1,9 +1,16 @@
-Alias /ganglia /usr/share/ganglia-webfrontend
+#
+# Ganglia monitoring system php web frontend
+#
+  
+Alias /ganglia /usr/share/ganglia
 
-<Directory "/usr/share/ganglia-webfrontend">
-	AllowOverride All
-	Order allow,deny
-	Allow from all
-	Deny from none
-</Directory>
+<Location /ganglia>
+    Order deny,allow
+    # Deny from all
+    Allow from all
+    Allow from 127.0.0.1
+    Allow from ::1
+    # Allow from .example.com
+</Location>
+
 
