--- a/vapor/support_files_ec2/templates/spark/conf/spark-defaults.conf
+++ b/vapor/support_files_ec2/templates/spark/conf/spark-defaults.conf
@@ -17,4 +17,4 @@ spark.executor.memory {{spark_slave_memory}}
 spark.driver.maxResultSize = 10g
 spark.akka.frameSize = 2047
 spark.rdd.compress = true
-spark.kryoserializer.buffer.max.mb = 2047
+spark.kryoserializer.buffer.max = 2047
